@@ -1,3 +1,9 @@
+2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* src/theme-pixbuf.h(struct _ThemeImage)
+	* src/sapwood-rc-style.c(theme_symbols, theme_parse_image): remove
+	unused 'recolorable' token
+
 2005-05-27  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* === Release 1.22 ===
